--- a/views/programs/pecp/home.ejs
+++ b/views/programs/pecp/home.ejs
@@ -4,8 +4,9 @@
   <link href="stylesheets/pecp/home.css" rel="stylesheet" />
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+  
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"> -->
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
@@ -232,7 +233,7 @@
                   </h3>
                 </div>
                 <div id="monitorscreen">
-                  <iframe id="vimeo-content" src="" frameborder="0" height="500px" width="1000px"
+                  <iframe id="vimeo-content" src="" height="500px" width="1000px"
                     allow="autoplay; fullscreen; picture-in-picture" allow="fullscreen"
                     title="High-intensity Classes"></iframe>
                 </div>
@@ -243,10 +244,7 @@
 
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch"   data-aos="fade-up">
             <div class="content">
-              <h3 class="">Opter pour le Personal Coaching English Program c'est </h3>
-              <p class="" class="py-2">
-                Choisir l'unique et idéale méthode qui vous convient pour vous surpasser et maitriser l'Anglais.
-              </p>
+              <h5 class="fst-italic text-primary pb-5">Opter pour le Personal Coaching English Program c'est Choisir l'unique et idéale méthode qui vous convient pour vous surpasser et maitriser l'Anglais. </h5>
             </div>
 
             <div class="accordion-list">
@@ -254,7 +252,7 @@
                 <li>
                   <a data-bs-toggle="collapse" class="collapse" data-bs-target="#accordion-list-1"><span>01</span> Identification de vos forces et lacunes <i class="fa-solid icon-show fa-chevron-up"></i><i class="fa-solid icon-close fa-chevron-down"></i></a>
                   <div id="accordion-list-1" class="collapse show" data-bs-parent=".accordion-list">
-                    <p>
+                    <p class="fs-5">
                       Avant toute chose, il est primordiale de savoir oú vous en êtes dans votre processus d'amélioration de niveau en Anglais. Un test d'évaluation de niveau est fait pour identifier vos forces et faiblesses en matiere de communication en Anglais. 
                     </p>
                   </div>
@@ -263,7 +261,7 @@
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-2" class="collapsed"><span>02</span> Un coach d'Anglais à votre disposition<i class="fa-solid icon-show fa-chevron-up"></i><i class="fa-solid icon-close fa-chevron-down"></i></a>
                   <div id="accordion-list-2" class="collapse" data-bs-parent=".accordion-list">
-                    <p>
+                    <p class="fs-5">
                       Après avoir identifié vos besoins, Il vous sera assigné un coach d'Anglais qui est chargé de vous coacher, suivre votre progression et vous pousser à atteindre les objectifs fixés.
                     </p>
                   </div>
@@ -272,7 +270,7 @@
                 <li>
                   <a data-bs-toggle="collapse" data-bs-target="#accordion-list-3" class="collapsed"><span>03</span> Un programme d'apprentissage souple et flexible <i class="fa-solid icon-show fa-chevron-up"></i><i class="fa-solid icon-close fa-chevron-down"></i></a>
                   <div id="accordion-list-3" class="collapse" data-bs-parent=".accordion-list">
-                    <p>
+                    <p class="fs-5">
                     Le programme d'apprentissage est souple et et assez flexible pour s'adapter à votre disponibilité. 
                     </p>
                   </div>
@@ -302,16 +300,16 @@
       <!-- Conversation courante  -->
         <div class="card">
           <h2 class="card_title">Conversation Courante</h2>
-          <p class="pricing">30.000 Fcfa<span class="small">/par mois</span></p>
+          <p class="pricing">$ 50<span class="small">/mois</span></p>
           <p>Anglais pour la communication courante</p>
           <p>Minimum 6 mois</p>
-          <p>Ideal pour Débutant</p>
+          <p>Idéal pour Débutant</p>
           <p>Apprentissage à un rythme normal</p>
           <hr>
           <ul class="features">
             <li>Anglais Général</li>
             <li>Accès au cours en ligne</li>
-            <li>2 Séances de cours / semaine</li>
+            <li>1 Séance de cours / semaine</li>
             <li>2 Séances de conversation / semaine</li>
             <hr>
             <p class="fst-italic">Bonus</p>
@@ -323,7 +321,7 @@
       <!-- Conversation technique -->
         <div class="card">
           <h2 class="card_title"> Conversation Technique </h2>
-          <p class="pricing">45.000 Fcfa<span class="small">/mois</span></p>
+          <p class="pricing">$ 80<span class="small">/mois</span></p>
           <p>Anglais technique pour besoin professionel</p>
           <p>Minimum 3 mois</p>
           <p>Idéal pour Professionnel</p>
@@ -332,7 +330,7 @@
           <ul class="features">
             <li>Anglais Technique</li>
             <li>Accès au cours en ligne</li>
-            <li>2 Séances de cours / semaine</li>
+            <li>1 Séance de cours / semaine</li>
             <!-- <li>Accès au cours en ligne</li> -->
             <li>2 Séances de conversation / semaine</li>
             <hr>
@@ -345,7 +343,7 @@
       <!-- Conversation totale -->
         <div class="card">
           <h2 class="card_title">Conversation Totale</h2>
-          <p class="pricing">60.000 Fcfa<span class="small">/mois</span></p>
+          <p class="pricing">$ 100<span class="small">/mois</span></p>
           <p>Anglais partout </p>
           <p>Minimum 6 mois</p>
           <p>Idéal pour Professionnel Débutant</p>
@@ -354,7 +352,7 @@
           <ul class="features">
             <li>Anglais Général et Technique</li>
             <li>Accès au cours en ligne</li>
-            <li>3 Séances de cours / semaine</li>
+            <li>2 Séances de cours / semaine</li>
             <!-- <li>Accès au cours en ligne</li> -->
             <li>3 Séances de conversation / semaine</li>
             <hr>
