--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -2,6 +2,15 @@
 <html lang="fr">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6E9J2N9N5H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6E9J2N9N5H');
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="https://www.afrohk.com/favicon-32x32.png" sizes="32x32" />
@@ -31,6 +40,7 @@
   <!-- <script type="text/javascript" src="/javascripts/warpspeed.js"></script> -->
   <title>Afro Language Lab</title>
 </head>
+
 
 <body>
   <a class="top-link top-btn-display" href="#"><i class="bi bi-arrow-up-circle-fill"></i></a>
