english program responsiveness

--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -291,12 +291,10 @@
                     alt="pecp-img" />
                 </div>
                 <div class="card-body d-flex flex-column align-items-start ms-3">
-                  <h3 class="program-name">Programme de Coaching Personalisé</h3>
+                  <h3 class="program-name">Coaching Personalisé d'Anglais</h3>
                   <p class="program-description">
                     Programme de coaching en Anglais, personalisé selon les besoins de l'apprenant. Il est axé sur
-                    l'apprentissage
-                    naturel et
-                    se déroule en ligne et en présentiel.
+                    les besoins immédiats de l’apprenant. 
                   </p>
 
                   <a href="/pecp" class="course-btn">En Savoir Plus</a>
@@ -318,8 +316,7 @@
                 <div class="card-body d-flex flex-column align-items-start ms-3">
                   <h3 class="program-name">Club de Conversation Naturelle</h3>
                   <p class="program-description">
-                    Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais des cadres
-                    d'entreprise dans des clubs.
+                    Un programme pratique et efficace pour l'amélioration continue du niveau d'Anglais des professionnels dans des clubs de conversation.
                   </p>
                   <!-- <a href="/englishlang4all/clubs/home" class="course-btn"> En Savoir Plus </a> -->
 
