--- a/public/stylesheets/landingpage.css
+++ b/public/stylesheets/landingpage.css
@@ -690,37 +690,6 @@ nav {
 /* End Navbar */
 /* banner section */
 
-#sky-wrapper {
-  /* background-color:rgb(248, 247, 247); */
-  height: 87vh;
-  background: url("https://images.unsplash.com/photo-1516182823370-7a5fa91445c3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80");
-  background-size: cover;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-position: center center;
-  position: relative;
-  background-attachment: fixed;
-  background-repeat: no-repeat;
-  margin: 0;
-  padding: 0;
-}
-
-#sky-wrapper:before {
-  content: "";
-  background: #000000;
-  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, rgba(0, 0, 0, 0.596), #00000067, #00000056, #00000028);
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, rgba(9, 9, 14, 0.856), #0d0d13c2, #10111ac7, #0000009f);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  /* background: rgba(0, 0, 0, 0.253); */
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
 
 .bg-img-wrapper {
   width: 100%;
@@ -879,11 +848,6 @@ nav {
   -webkit-transform: rotate(40deg);
   transform: rotate(40deg);
 }
-
-#sky {
-  display: none;
-}
-
 .motto {
   z-index: 10;
   padding: 1rem;
@@ -904,10 +868,6 @@ nav {
 
 /* end  banner */
 /*  Main content */
-
-#site-content {
-  /* margin-top: 1rem; */
-}
 
 /* Got to top link */
 
@@ -1247,6 +1207,7 @@ nav {
 
   font-weight: 700;
   font-size: 1.5rem;
+  color: #420786;
 }
 
 .sponsored-program-name {
@@ -1265,7 +1226,7 @@ nav {
   margin: 1.3rem 0;
   font-size: 1.2rem;
   color: rgba(32, 32, 32, 0.781);
-  line-height: 2.5rem;
+  line-height: 3rem;
   height: 8rem;
 }
 
@@ -2192,15 +2153,12 @@ ul {
   }
 
 
-
   @media (max-width: 578px) {
     .footer-slogan {
       font-size: 1rem;
     }
 
-
   }
-
 
 
   /* responsive */
@@ -2321,16 +2279,15 @@ ul {
   /*=========================Responsiveness ===========================*/
   @media (max-width: 1400px) {
 
-    .program-description {
-      line-height: 3rem;
-      height: 13rem;
-    }
+ 
 
     .news-text {
       padding-top: 1rem;
       height: 15rem;
       font-size: 1.2rem;
     }
+
+  
   }
 
   @media (max-width: 1200px) {
@@ -2346,6 +2303,22 @@ ul {
       padding: 3rem 0;
     }
 
+    .program-description {
+      font-family: Georgia, 'Times New Roman', Times, serif;
+      font-size: 1.3rem;
+      font-weight: 400;
+      margin: 1.3rem 0;
+      font-size: 1.2rem;
+      color: rgba(32, 32, 32, 0.781);
+      line-height: 3rem;
+      height: 10rem;
+    }
+    
+    .course-btn{
+      margin-top: 2rem;
+    }
+
+  
     #banner-wrapper {
       z-index: 2;
       top: 25%;
@@ -2464,7 +2437,7 @@ ul {
 
 
     .program-description {
-      line-height: 3rem;
+      /* line-height: 3rem; */
       height: 10rem;
     }
 
