--- a/views/programs/englishlang4all/englishClubs/show.ejs
+++ b/views/programs/englishlang4all/englishClubs/show.ejs
@@ -283,14 +283,14 @@
       <div class="activities-wrapper py-3">
         <!-- Daily vocabulary -->
         <section class="">
-          <h1 class="daily-vocabulary-title">Daily Vocabulary</h1>
+          <h1 class="daily-vocabulary-title">Useful Vocabulary</h1>
           <div class="row mb-5">
             <!-- Word -->
             <div class="col-md-6">
               <div class="daily-content">
                 <div class="card m-2">
                   <div class="card-header text-center word-day">
-                    <h4 class="fw-bold ">Word of the day </h4>
+                    <h4 class="fw-bold ">New Word </h4>
                   </div>
                   <div class="card-body">
 
@@ -399,7 +399,7 @@
               <div class="daily-content">
                 <div class="card m-2">
                   <div class="card-header text-center idiom-day">
-                    <h4 class="fw-bold">Idiom of the day</h4>
+                    <h4 class="fw-bold">New Idiom</h4>
                   </div>
                   <div class="card-body">
                     <p class="card-title idioms-title">
