--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -262,8 +262,7 @@
                 </h3>
               </div>
               <div id="monitorscreen">
-                <iframe loading="lazy" id="vimeo-content" src="https://www.youtube.com/embed/MGbCBxVdm5Y"
-                  frameborder="0" height="100%" width="100%" allow="autoplay; fullscreen; picture-in-picture"
+                <iframe loading="lazy" id="vimeo-content" src="https://player.vimeo.com/video/671768671?h=88dcd8ab57&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" height="100%" width="100%" allow="autoplay; fullscreen; picture-in-picture"
                   allow="fullscreen" title="High-intensity Classes"></iframe>
               </div>
             </div>
