--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -244,7 +244,7 @@
           <div class="presentation-text-wrapper" data-aos="fade-up" data-aos-duration="500">
             <h3 class="presentation-heading">MISSION</h3>
             <p class="presentation-paragraph">
-              Notre mission est de vous amenez à parler naturellement l'Anglais en 6 mois.
+              Notre mission est de vous amener à parler naturellement l'Anglais en 6 mois.
             </p>
 
             <% if (!currentUser) {%>
