--- a/views/programs/pecp/home.ejs
+++ b/views/programs/pecp/home.ejs
@@ -15,7 +15,7 @@
   <div class="banner-wrapper d-flex flex-column align-items-center justify-content-center">
 
     <div class="d-flex flex-column  align-items-around justify-content-center">
-      <h1 class="banner-heading">Personal English Coaching Program</h1>
+      <h1 class="banner-heading">Coaching en Anglais Personnalisé</h1>
       <!-- Button trigger modal -->
       <div class="row">
         <div class="col-sm-4 d-flex justify-content-center">
@@ -49,7 +49,7 @@
         <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Personal English Coaching Program</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Coaching en Anglais Personnalisé</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -141,7 +141,7 @@
                 <h5>Solution Pour Entreprise</h5>
                 <h2>Donner<strong>le sourire 😊 aux cadres</strong></h2>
                 <div class="heading_line"><span></span></div>
-                <p>Le <strong class="text-info">Personal English Coaching Program</strong> est la solution idéale pour
+                <p>Le <strong class="text-info">Coaching en Anglais Personnalisé</strong> est la solution idéale pour
                   accompagner les cadres d'entreprise, qui aimeraient communiquer en Anglais avec aisance </p>
               </div>
               <a href=" tel: +22653344444">Contactez-nous: (226) 53344444<i class="icofont-long-arrow-right"></i></a>
@@ -244,7 +244,7 @@
 
           <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch"   data-aos="fade-up">
             <div class="content">
-              <h5 class="fst-italic text-primary pb-5">Opter pour le Personal Coaching English Program c'est Choisir l'unique et idéale méthode qui vous convient pour vous surpasser et maitriser l'Anglais. </h5>
+              <h5 class="fst-italic text-primary pb-5">Opter pour le Coaching en Anglais Personnalisé c'est Choisir l'unique et idéale méthode qui vous convient pour vous surpasser et maitriser l'Anglais. </h5>
             </div>
 
             <div class="accordion-list">
