--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -13,7 +13,10 @@
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="https://www.afrohk.com/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1687742231/all_white_bg_o0gqr7.jpg" sizes="32x32" />
+
+
+  <meta property="og:image" content="  https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828347/Screen_Shot_2023-03-26_at_10.56.26_lwxn4z.png"/>
   <!-- Bootstrap Css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -290,9 +293,9 @@
                     alt="pecp-img" />
                 </div>
                 <div class="card-body d-flex flex-column align-items-start ms-3">
-                  <h3 class="program-name">Coaching Personalisé d'Anglais</h3>
+                  <h3 class="program-name">Coaching en Anglais Personnalisé</h3>
                   <p class="program-description">
-                    Programme de coaching en Anglais, personalisé selon les besoins de l'apprenant. Il est axé sur
+                    Programme de coaching en Anglais, personnalisé selon les besoins de l'apprenant. Il est axé sur
                     les besoins immédiats de l’apprenant. 
                   </p>
 
