--- a/views/layouts/pecpBoilerplate.ejs
+++ b/views/layouts/pecpBoilerplate.ejs
@@ -29,7 +29,7 @@
         href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Poppins:wght@600;700;800;900&display=swap"
         rel="stylesheet" />
         
-    <title>PECP</title>
+    <title>CAP</title>
 </head>
 
 <body class="">
