--- a/views/all_home.ejs
+++ b/views/all_home.ejs
@@ -13,9 +13,7 @@
 </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1687742231/all_white_bg_o0gqr7.jpg" sizes="32x32" />
-
-
+  
   <meta property="og:image" content="  https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828347/Screen_Shot_2023-03-26_at_10.56.26_lwxn4z.png"/>
   <!-- Bootstrap Css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css" />
@@ -40,7 +38,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Chivo:wght@400;700;900&family=Poppins:wght@600;700;800;900&display=swap"
     rel="stylesheet" />
-  <!-- <script type="text/javascript" src="/javascripts/warpspeed.js"></script> -->
   <title>Afro Language Lab</title>
 </head>
 
@@ -247,7 +244,7 @@
           <div class="presentation-text-wrapper" data-aos="fade-up" data-aos-duration="500">
             <h3 class="presentation-heading">MISSION</h3>
             <p class="presentation-paragraph">
-              Notre mission est de vous amener à parler naturellement l'Anglais en 6 mois.
+              Notre mission est de vous amener à parler naturellement l'Anglais en 6 mois
             </p>
 
             <% if (!currentUser) {%>
@@ -507,7 +504,7 @@
       <div class="swiper-wrapper align-items-center py-5">
         <!-- Slides -->
         <div class="swiper-slide">
-          <img src="images/EN-O-MIKE.png" class="img-fluid" alt="" />
+          <img src="" class="img-fluid" alt="" />
         </div>
         <div class="swiper-slide">
           <img src="https://i.ibb.co/tPqrN2Q/CAGE-FISCOM.jpg" alt="CAGE-FISCOM">
