--- a/views/user/userprofile.ejs
+++ b/views/user/userprofile.ejs
@@ -42,10 +42,9 @@
           <div class="program-img-wrapper">
             <img src="https://cambridgeinstitute.co.in/wp-content/uploads/2021/03/english-img-22.jpg" class="img-fluid"
               alt="">
-            <a class="btn my-3 ms-3 btn-outline-success"
-              href="/user/<%=currentUser._id%>/pecpStudentDashboard/<%=currentUser.pecpStudent_id%>">Personal
-              English
-              Coaching Program</a>
+            <a class="btn mb-2 mt-3 fw-bold ms-3 btn-outline-primary"
+              href="/user/<%=currentUser._id%>/pecpStudentDashboard/<%=currentUser.pecpStudent_id%>">
+              Coaching en Anglais Personnalisé</a>
             <%}%>
           </div>
         </div>
@@ -57,7 +56,7 @@
             <img
               src="https://res.cloudinary.com/afro-house-of-knowledge/image/upload/v1679828340/Screen_Shot_2023-03-26_at_10.56.54_hjlani.png"
               class="img-fluid" alt="">
-            <p class="nep d-inline-block">Natural English for Professionals</p>
+            <p class="nep d-inline-block">Club de Conversation Naturelle</p>
             <!-- Button trigger modal -->
             <button type="button my-clubs" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#mes-clubs">
               Mes Clubs
